Fixed spacing on welcome css

--- a/static/CSS/welcome.css
+++ b/static/CSS/welcome.css
@@ -28,11 +28,11 @@ h1 {
 }
 
 #username_box{
-  padding: 25px 25px;
+  padding: 25px 30px;
   border: 6px solid black;
   margin-top: 358px;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: 38px;
+  margin-right: 30px;
   margin-bottom: 25px;
   text-align: left;
   background-color: blue;
@@ -46,10 +46,10 @@ h1 {
 #level_box{
   padding: 25px 25px;
   width: 435px;
-  height: 75px;
+  height: 78px;
   border: 6px solid black;
-  margin-top: 70px;
-  margin-left: 12px;
+  margin-top: 95px;
+  margin-left: 15px;
   margin-right: 20px;
   text-align: center;
   background-color: blue;
@@ -63,8 +63,9 @@ h1 {
 #howtoplay_button {
   text-align: right;
   left:1053px;
-  top: 650px;
+  top: 655px;
   padding: 15px 45px;
+  margin-left: 8px;
   background-color: blue;
   color: white;
   position: fixed;
@@ -78,7 +79,7 @@ h1 {
 #abouthecreators_button {
   text-align: right;
   left:560px;
-  top: 650px;
+  top: 655px;
   padding: 15px 60px;
   background-color: blue;
   color: white;
@@ -91,7 +92,7 @@ h1 {
 }
 
 #submit_button {
-  padding: 35px 30px;
+  padding: 30px 30px;
   border: 6px solid black;
   margin-left: 20px;
   margin-top: 90px;
